<resources>
    <string name="app_name">ObjetivosSaludables</string>

    <!--PORTADA-->
    <string name="headerPortada">Haz un seguimiento de tu progreso, obtén información y mejora tu estilo de vida.</string>
    <string name="btn_iniciarSesion">Iniciar Sesión</string>
    <string name="btnCrearCuenta">Crear Cuenta</string>
    <string name="btSaberMas">Saber más</string>


    <!--CREAR CUENTA-->
    <string name="name">Nombre</string>
    <string name="Appellido">Apellido</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="crearCuenta">Crear Cuenta</string>

    <!--ERRORES-->
    <string name="errorFaltaCampo">Debes insertar un </string>
    <string name="errorMaxChars">Debe tener menos de 28 caracteres</string>
    <string name="errorBadEmail">El email debe estar en el formato name@example.com</string>
    <string name="errorPass">Tu contraseña debe tener de 4 a 8 caracteres e incluir un número o caracter especial y una mayúscula</string>
    <string name="passNoCoinciden">Las contraseñas no coinciden</string>
    <string name="passViejaYNuevaSonIguales">La nueva contraseña y la antigüa no deben coincidir</string>

    <!--HINTS-->
    <string name="nameHint">Nombre</string>
    <string name="AppellidoHint">Apellido</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>

    <!--NOTICIAS-->

    <string-array name="titulo_noticias">
        <item>Beneficios de correr a diario, para la salud.</item>
        <item>Calentamiento antes de empezar</item>
        <item>Ejercicio sin salir de casa</item>
        <item>Consejos para comer mas sano</item>
    </string-array>

    <string-array name="enlace_noticias">
        <item>https://www.runnersworld.com/es/salud-lesiones-runner/a40141551/beneficios-correr/</item>
        <item>https://www.nike.com/es/a/consejos-calentamiento-entrenamiento</item>
        <item>https://www.runnersworld.com/es/training/g25549809/ejercicios-con-peso-corporal-en-casa/</item>
        <item>https://findyoureverest.es/consejos-para-comer-mas-sano/</item>
    </string-array>

    <!--AJUSTES-->

    <string name="confiPersonal">Configuración personal</string>
    <string name="verInfo">Modifica aquí tu información personal</string>
    <string name="cuenta">Cuenta:</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="sobre">Sobre</string>
    <string name="valora">Valora nuestra App y danos tu opinión</string>
    <string name="preferencias">Preferencias</string>
    <string name="prefeSonidos">Sonidos,vibración…</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="notiInfo">Personaliza tus notificaciones</string>
    <string name="seguridad">Seguridad</string>
    <string name="seguLicencias">Contraseñas</string>
    <string name="tuCuenta">Tu cuenta</string>
    <string name="correo">Dirección de correo electrónico:</string>
    <string name="tuPeso">Tu peso</string>
    <string name="kg">kg</string>
    <string name="fechaNacimiento">Fecha de nacimiento</string>
    <string name="fecha">fecha</string>
    <string name="TuPerfil">Tu perfil</string>
    <string name="Tugenero">Tu género</string>
    <string name="genero">genero</string>
    <string name="mujer">Mujer</string>
    <string name="hombre">Hombre</string>
    <string name="TuAltura">Tu altura</string>
    <string name="altura">cm</string>
    <string name="NoIndicado">Prefiero no indicarlo</string>
    <string name="confDeLaApp">Configuración de la app</string>
    <string name="recordatorio">Recordatorios</string>
    <string name="desactivado">Desactivar</string>
    <string name="activado">Activar</string>
    <string name="botonSonido">Sonido</string>
    <string name="botonVolver">Volver</string>
    <string name="sonido">Sonido</string>
    <string name="vibracion">Vibración</string>
    <string name="idiomas">Idiomas</string>
    <string name="cambiarIdioma">Cambiar Idioma</string>
    <string name="general">Introduce el número que te hemos enviado a tu correo electrónico</string>
    <string name="tuColorPreferido">Elige tu color</string>
    <string name="objetivosSaludables">Objetivos Saludables</string>
    <string name="app">App</string>
    <string name="modificarUsu">Modificar usuario</string>
    <string name="colorRosa">Rosa</string>
    <string name="colorVerde">Verde</string>
    <string name="colorAzul">Azul</string>
    <string name="tituloCambioPassWord">Modifica tu contraseña</string>
    <string name="passWordActual">Contraseña Actual</string>
    <string name="nuevaPassWord">Nueva contraseña</string>
    <string name="repeNuevaPassWord">Repetir contraseña</string>
    <string name="btModifPassWord">Modificar</string>
    <string name="idiomaCambiado">Debe reiniciar la aplicación para mostrar el nuevo idioma</string>
    <string name="faltaCampoNombre">Debe insertar un nombre</string>
    <string name="faltaCampoPeso">Debe insertar un peso</string>
    <string name="faltaCampoFechaNacimiento">Debe insertar una fecha de nacimiento</string>
    <string name="faltaCampoAltura">Debe insertar una altura</string>
    <string name="faltaCampoGenero">Debe insertar un género</string>
    <string name="errorAlObtenerInfo">Error al obtener la información, pruebe más tarde</string>
    <string name="errorAlModificarLaInformacion">Error al modificar la información</string>
    <string name="passwordOlvidada">¿Has olvidado tu contraseña?</string>
    <string name="bt_eliminar">Eliminar cuenta</string>

    <!--SEGURIDAD-->
    <string name="errorContraseña">Error contraseña</string>
    <string name="campoObligatorio">Campo contraseña obligatorio</string>
    <string name="restablecerPassword">Restablecer contraseña</string>
    <string name="introducirEmail">Introduce tu dirección de correo electrónico y nosotros te enviaremos un código para que puedas restablecer tu contraseña</string>
    <string name="otpInfo">Introduce el número que te hemos enviado a tu correo electrónico</string>
    <string name="otptitulo">Verificación otp por Email</string>
    <string name="btOtpContinuar">CONTINUAR</string>
    <string name="otpVolverEnviar">Volver a enviar OTP</string>
    <string name="faltaOTP">Introduce un OTP</string>
    <string name="otpSoloNumerico">OTP es un valor numérico</string>
    <string name="otp">OTP</string>
    <string name="nuevaPassword">Introduzca una nueva contraseña para su cuenta:</string>

    <!--MENUS-->

    <string name="menus">Menús</string>
    <string name="elegirMenu">Aquí puedes encontrar tus menús según tus preferencias</string>
    <string name="MenuLostPeso">Menús para bajar de peso</string>
    <string name="menusSemanal">Menús semanal</string>
    <string-array name="ganarMasaMuscular">Menús para ganar masa muscula</string-array>
    <string name="ejercicioTitle">Ejercicios</string>
    <string name="elegirEjercico">Aquí puedes encontrar tus ejercicios según tus preferencias</string>

    <!--FORMULARIO DATOS USUARIO-->

    <string name="sobreTi">Cuentanos un poco sobre ti</string>
    <string name="InsertaTusDatos">Inserta tu datos aquí:</string>
    <string name="insertaUsu">Crear</string>
    <string name="CampoPeso">Campo peso obligatorio</string>
    <string name="campoPesoIncorrecto">Peso solo debe tener numeros y/o decimales</string>
    <string name="campoFecha">Campo fecha obligatorio</string>
    <string name="campoFechaIncorrecto">Fecha debe tener el formato: yyyy-MM-dd</string>
    <string name="campoGenero">Campo genero obligatorio</string>
    <string name="campoAltura">Campo altura obligatorio</string>
    <string name="campoAlturaIncorrecto">Altura debe ser numérico sin decimales</string>

    <!--NOTIFICACIONES-->

    <string name="EnviarComentario">Enviar Comentarios</string>
    <string name="seccionComent">Aquí podras enviarnos tus comentario y decirnos que te ha parecido nuestra app y en que podemos mejorar</string>
    <string name="comentarioEnviado">Comentario enviado</string>


    <!--SPINNERS-->

    <string-array name="spinnerGenero">
        <item>Mujer</item>
        <item>Hombre</item>
        <item>Prefiero no contestar</item>
    </string-array>

    <string-array name="menusPerderPeso">
        <item name="menu1">Lunes</item>
        <item name="menu2">Martes</item>
        <item name="menu2">Miercoles</item>
        <item name="menu4">Jueves</item>
        <item name="menu5">Viernes</item>
    </string-array>

    <string-array name="menusGanarMasa">
        <item name="menu1">Lunes</item>
        <item name="menu2">Martes</item>
        <item name="menu2">Miercoles</item>
        <item name="menu4">Jueves</item>
        <item name="menu5">Viernes</item>
    </string-array>


    <!--OBJETIVOS-->

    <string name="definObj">Define tus objetivos</string>
    <string name="verObj">¿Hasta dónde quieres llegar?</string>
    <string name="consultaSem">Consulta tu plan semanal</string>
    <string name="planning">Dieta y entrenamiento personalizado</string>
    <string name="entrenamiento">Entrenamiento</string>
    <string name="horasEnt">Introduce tus tiempos de entrenamiento</string>
    <string name="suenio">Horas de sueño</string>
    <string name="horasSue">¿Cuánto has dormido hoy?</string>
    <string name="pasos">Número de pasos</string>
    <string name="numPasos">Registra los pasos de hoy</string>

    <!--SUENIO-->

    <string name="suenioHoy">¿Cuánto has dormido hoy?</string>
    <string name="Puntuacion">Tu puntuación de hoy ha sido:</string>
    <string name="mediaSemanal">Tu media de horas para esta semana es:</string>
    <string name="humorEsperado">Según tu descanso es normal que te sientas:</string>
    <string name="estas">Estás a un</string>
    <string name="objetivo">de conseguir tu objetivo</string>
    <string name="humorBien">Alegre, enérgico, optimista, resolutivo</string>
    <string name="humorMal">Irritable, pesimista, lapsus de memoria</string>
    <string name="suenioError">Debe ser una hora válida</string>
    <string name="noHorasSuenio">No tienes horas de sueño reportadas</string>

    <!--PASOS-->

    <string name="pasosHoy">¿Cuántos pasos has dado hoy?</string>
    <string name="mediaSemanalPasos">Tu media de pasos para esta semana es:</string>
    <string name="humorEsperadoPasos">Según tu actividad es normal que te sientas:</string>
    <string name="pasosError">Debe ser una cifra válida</string>
    <string name="noPasos">No tienes número de pasos reportados</string>

    <!--ENTRENAMIENTO-->

    <string name="entrenamientoHoy">¿Cuántas horas has entrenado hoy?</string>
    <string name="mediaSemanalEntrenamiento">Tu media de horas entrenadas para esta semana es:</string>
    <string name="humorEsperadoEntrenamiento">Según tu actividad es normal que te sientas:</string>
    <string name="entrenamientpError">Debe ser una cifra válida</string>
    <string name="noEntrenamiento">No tienes número de horas reportadas</string>

    <!--OBJETIVOS-->

    <string name="objSuenio">¿Cuál es tu objetivo de sueño?</string>
    <string name="objPasos">¿Cuál es tu objetivo de pasos?</string>
    <string name="objEntrenamiento">¿Cuál es tu objetivo de entrenamiento?</string>
    <string name="objPeso">¿Qué quieres conseguir?</string>
    <string name="perderPeso">Perder peso</string>
    <string name="aumentarMasa">Aumentar masa muscular</string>
    <string name="grabarObjetivos">Grabar Objetivos</string>

    <!--TOOLBAR-->
    <string name="titleToolBar">Be Healthy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_establecer_objetivos">EstablecerObjetivos</string>
    <string name="cambiarTema">Cambia el tema de los botones</string>
    <string name="recordatorios">Recordatorios</string>
</resources>