<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/second_background"
    tools:context=".pages.configuracion.ConfgPreferencias">

    <include
        layout="@layout/action_bard_default"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/textviewGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/preferencias"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Switch
                android:id="@+id/switchSonido"
                style="@style/textviewGeneral"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/sonido"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Switch
                android:id="@+id/switchVibracion"
                style="@style/textviewGeneral"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/vibracion"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/textviewGeneral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="18sp"
                android:text="@string/idiomas"
                android:textStyle="bold" />

            <TextView
                style="@style/textviewGeneral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cambiarIdioma"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Spinner
                android:id="@+id/spinnerIdioma"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/edittext_rounded"
                android:paddingHorizontal="9dp"
                android:popupBackground="@drawable/style_spinner_items_container" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textVi"
                style="@style/textviewGeneral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/cambiarTema"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/colorPrefe"
                style="@style/textviewGeneral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/tuColorPreferido"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <RadioGroup
                android:id="@+id/rg_Colores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonVerde"
                    style="@style/textviewGeneral"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/container_info_settings"
                    android:backgroundTint="@color/greenStateFalse"
                    android:buttonTint="@color/white"
                    android:text="@string/colorVerde"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioButtonRosa"
                    style="@style/textviewGeneral"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/container_info_settings"
                    android:backgroundTint="@color/pinkStateFalse"
                    android:buttonTint="@color/white"
                    android:text="@string/colorRosa"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioButtonAzul"
                    style="@style/textviewGeneral"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/container_info_settings"
                    android:backgroundTint="@color/blueStateFalse"
                    android:buttonTint="@color/white"
                    android:text="@string/colorAzul"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>