<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degraded_background_green"
    tools:context=".pages.otp.Otp_OlvidadaPassword">

    <LinearLayout
        android:id="@+id/linearLayoutContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <include layout="@layout/action_bard_default" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            style="@style/textviewGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/otptitulo"
            android:textStyle="bold"/>

        <TextView
            style="@style/textviewGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otpInfo"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            style="@style/textviewGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/otp"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <EditText
            android:id="@+id/txt_otp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/edittext_rounded"
            android:ems="10"
            android:inputType="number"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            tools:ignore="OnClick" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/txt_volverEnviarOTP"
            style="@style/textviewGeneral"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/otpVolverEnviar"
            android:textAlignment="textEnd"
            android:textColor="#358338"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/bt_otpContinuar"
            style="@style/BotonPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="login"
            android:text="@string/btOtpContinuar" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>