<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degraded_background_green"
    tools:context=".pages.otp.ModificarPassword_OTP">

    <LinearLayout
        android:id="@+id/linearLayoutContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <include layout="@layout/action_bard_default" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            style="@style/textviewGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/restablecerPassword"
            android:textStyle="bold"/>

        <TextView
            style="@style/textviewGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nuevaPassword"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            style="@style/textviewGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nuevaPassWord" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_passWordNueva_otp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/edittext_rounded"
                android:drawableStart="@drawable/baseline_key"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lbError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:shadowColor="#656161"
                android:shadowDx="0"
                android:shadowDy="-0.2"
                android:shadowRadius="0.2"
                android:text="@string/errorPass"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            style="@style/textviewGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeNuevaPassWord" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_passWordNuevaRepe_otp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/edittext_rounded"
                android:drawableStart="@drawable/baseline_key"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/bt_modificarPassWord_otp"
            style="@style/BotonPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="cambiarPassword"
            android:text="@string/btModifPassWord" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>