<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/second_background"
    tools:context=".pages.configuracion.ConfgNotificaciones">


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/textNotificacion"
                    style="@style/textviewGeneral"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/notificaciones"
                    android:textStyle="bold"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/textnoti"
                    style="@style/textviewGeneral"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/recordatorios"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <Switch
                    android:id="@+id/switchRecordatorio"
                    style="@style/textviewGeneral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/activado" />




            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>